# nspark

./: .gitignore  BUGS  CHANGES  CMakeLists.txt  COMPILING  Makefile  Makefile.gcc  Makefile.wat  README  README.TOO  acorn.c  arc.c  arc.h  arcfs.c  arcfs.h  compress.c  compress.h  cproto.h  crc.c  crc.h  date.c  date.h  error.c  error.h  garble.c  garble.h  io.c  main.c  main.h  misc.c  misc.h  mkendian.c  msdos.c  nosysdep.sed  nsparkio.h  os.h  pack.c  pack.h  spark.h  sqshmain.c  (+7 more)
.github/workflows/: actions.yml
cmake/: mingw-cross.cmake
man/: arcfs.5  arcfs5.txt  nspark.1  nspark1.txt  spark.5  spark5.txt  sqsh.1  sqsh1.txt
msdos/: README  makefile  makefile.bor  nspark.ide  nspark.prj
msdos/alt/: compress.c  haspragm.c  makefile.bor  nspark.ide  nspark.prj
riscos/: Makefile  README  ren
testprog/: .pack.c.swp  CMakeLists.txt  pack.c
tests/: compress,3fb  crunch,3fb  info.txt  new_arca,3fb  new_arcb,3fb  pack,3fb  store,3fb
unix/: Makefile  ren
win32/: MAKEFILE
